--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ JWT_SECRET=my_new_super_secret_key_123
 CLOUDINARY_CLOUD_NAME=dhaybuzxr
 CLOUDINARY_API_KEY=553618929964643
 CLOUDINARY_API_SECRET=gTjEHQJXPf_f-qBLJp-3y4gMnfs
+NODE_ENV=mahmooo123
