--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ CLOUDINARY_CLOUD_NAME=dhaybuzxr
 CLOUDINARY_API_KEY=553618929964643
 CLOUDINARY_API_SECRET=gTjEHQJXPf_f-qBLJp-3y4gMnfs
 NODE_ENV=mahmooo123
+APP_EMAIL_ADDRESS=mahmoudalden125@gmail.com
+APP_EMAIL_PASSWORD=lhdg zydm vkuh pfwk
